[gd_scene load_steps=16 format=2]

[ext_resource path="res://Additional/HurtBoxes.tscn" type="PackedScene" id=1]
[ext_resource path="res://Project 01/Enemy- Big Eye.png" type="Texture" id=2]
[ext_resource path="res://Enemy/BigEye.gd" type="Script" id=3]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemy/PlayerDetectionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://Additional/HitBoxes.tscn" type="PackedScene" id=6]
[ext_resource path="res://Overlay/StatsUI.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemy/WanderControl.tscn" type="PackedScene" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
radius = 6.84956
height = 11.9536

[sub_resource type="CapsuleShape2D" id=6]
height = 10.0

[sub_resource type="CircleShape2D" id=7]
radius = 157.013

[node name="BigEye" type="KinematicBody2D"]
collision_layer = 2147483652
collision_mask = 2147483648
script = ExtResource( 3 )
__meta__ = {
"_edit_vertical_guides_": [ 250.0 ]
}
speed = 30

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1.16796, 0.930112 )
shape = SubResource( 5 )

[node name="HurtBoxes" parent="." instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" parent="HurtBoxes" index="0"]
shape = SubResource( 6 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 100

[node name="WanderControl" parent="." instance=ExtResource( 8 )]

[node name="StatsUI" parent="." instance=ExtResource( 7 )]
margin_top = 21.0
margin_bottom = 21.0

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 5 )]
collision_layer = 4
input_pickable = false
monitorable = false
priority = 1.0

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.356863 )
shape = SubResource( 7 )

[node name="AimPoint" type="Position2D" parent="."]

[node name="HitBoxes" parent="AimPoint" instance=ExtResource( 6 )]
position = Vector2( -16, 0 )

[connection signal="area_entered" from="HurtBoxes" to="." method="_on_HurtBoxes_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="HurtBoxes"]
[editable path="PlayerDetectionZone"]
